@@ -17,7 +17,6 @@ import com.google.common.collect.Iterables;
 import io.dropwizard.jersey.errors.ErrorMessage;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
 import javax.ws.rs.core.Response;
@@ -29,7 +28,8 @@ import javax.ws.rs.ext.Provider;
  * mapping the response code to 400 bad request.
  */
 @Provider
-public class ConstraintViolationExceptionMapper implements ExceptionMapper<ConstraintViolationException> {
+public class ConstraintViolationExceptionMapper
+    implements ExceptionMapper<ConstraintViolationException> {
   @Override
   public Response toResponse(ConstraintViolationException exception) {
     Set<ConstraintViolation<?>> constraintViolations = exception.getConstraintViolations();
@@ -40,9 +40,10 @@ public class ConstraintViolationExceptionMapper implements ExceptionMapper<Const
                   String name = Iterables.getLast(constraintViolation.getPropertyPath()).getName();
                   return name + " " + constraintViolation.getMessage();
                 })
-            .collect(Collectors.toList());
+            .toList();
     return Response.status(Response.Status.BAD_REQUEST)
-        .entity(new ErrorMessage(Response.Status.BAD_REQUEST.getStatusCode(), errorMessages.toString()))
+        .entity(
+            new ErrorMessage(Response.Status.BAD_REQUEST.getStatusCode(), errorMessages.toString()))
         .build();
   }
 }
