@@ -23,6 +23,7 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.openmetadata.common.utils.CommonUtil.listOf;
 import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
+import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
 import static org.openmetadata.csv.CsvUtil.recordToString;
 import static org.openmetadata.csv.EntityCsvTest.assertRows;
 import static org.openmetadata.csv.EntityCsvTest.assertSummary;
@@ -33,6 +34,7 @@ import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.DEPARTMENT;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.DIVISION;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.GROUP;
 import static org.openmetadata.schema.api.teams.CreateTeam.TeamType.ORGANIZATION;
+import static org.openmetadata.service.Entity.FIELD_DOMAINS;
 import static org.openmetadata.service.Entity.ORGANIZATION_NAME;
 import static org.openmetadata.service.Entity.TEAM;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.CREATE_GROUP;
@@ -49,14 +51,18 @@ import static org.openmetadata.service.util.EntityUtil.fieldUpdated;
 import static org.openmetadata.service.util.TestUtils.ADMIN_AUTH_HEADERS;
 import static org.openmetadata.service.util.TestUtils.TEST_AUTH_HEADERS;
 import static org.openmetadata.service.util.TestUtils.TEST_USER_NAME;
+import static org.openmetadata.service.util.TestUtils.USER_WITH_CREATE_HEADERS;
+import static org.openmetadata.service.util.TestUtils.UpdateType.CHANGE_CONSOLIDATED;
 import static org.openmetadata.service.util.TestUtils.UpdateType.MINOR_UPDATE;
+import static org.openmetadata.service.util.TestUtils.UpdateType.NO_CHANGE;
+import static org.openmetadata.service.util.TestUtils.UpdateType.REVERT;
 import static org.openmetadata.service.util.TestUtils.assertListNotNull;
 import static org.openmetadata.service.util.TestUtils.assertResponse;
 import static org.openmetadata.service.util.TestUtils.validateEntityReferences;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import java.io.IOException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -74,6 +80,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.openmetadata.common.utils.CommonUtil;
 import org.openmetadata.csv.EntityCsv;
+import org.openmetadata.csv.EntityCsvTest;
 import org.openmetadata.schema.api.policies.CreatePolicy;
 import org.openmetadata.schema.api.teams.CreateRole;
 import org.openmetadata.schema.api.teams.CreateTeam;
@@ -86,18 +93,20 @@ import org.openmetadata.schema.entity.teams.Role;
 import org.openmetadata.schema.entity.teams.Team;
 import org.openmetadata.schema.entity.teams.TeamHierarchy;
 import org.openmetadata.schema.entity.teams.User;
+import org.openmetadata.schema.type.ApiStatus;
 import org.openmetadata.schema.type.ChangeDescription;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.ImageList;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.MetadataOperation;
 import org.openmetadata.schema.type.Profile;
+import org.openmetadata.schema.type.Webhook;
 import org.openmetadata.schema.type.csv.CsvImportResult;
+import org.openmetadata.schema.type.profile.SubscriptionConfig;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.CatalogExceptionMessage;
 import org.openmetadata.service.jdbi3.TeamRepository.TeamCsv;
 import org.openmetadata.service.resources.EntityResourceTest;
-import org.openmetadata.service.resources.locations.LocationResourceTest;
 import org.openmetadata.service.resources.policies.PolicyResourceTest;
 import org.openmetadata.service.resources.teams.TeamResource.TeamHierarchyList;
 import org.openmetadata.service.resources.teams.TeamResource.TeamList;
@@ -106,14 +115,15 @@ import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.util.ResultList;
 import org.openmetadata.service.util.TestUtils;
-import org.openmetadata.service.util.TestUtils.UpdateType;
 
 @Slf4j
 public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
-  final Profile PROFILE = new Profile().withImages(new ImageList().withImage(URI.create("http://image.com")));
+  final Profile PROFILE =
+      new Profile().withImages(new ImageList().withImage(URI.create("http://image.com")));
 
   public TeamResourceTest() {
     super(TEAM, Team.class, TeamList.class, "teams", TeamResource.FIELDS);
+    supportsSearchIndex = true;
   }
 
   public void setupTeams(TestInfo test) throws HttpResponseException {
@@ -144,13 +154,16 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team org = getEntityByName(ORGANIZATION_NAME, "", ADMIN_AUTH_HEADERS);
 
     // Organization can't be deleted
-    assertResponse(() -> deleteEntity(org.getId(), ADMIN_AUTH_HEADERS), BAD_REQUEST, DELETE_ORGANIZATION);
+    assertResponse(
+        () -> deleteEntity(org.getId(), ADMIN_AUTH_HEADERS), BAD_REQUEST, DELETE_ORGANIZATION);
 
     // Organization can't be created
     CreateTeam create = createRequest("org_test").withTeamType(ORGANIZATION);
-    assertResponse(() -> createEntity(create, ADMIN_AUTH_HEADERS), BAD_REQUEST, CREATE_ORGANIZATION);
+    assertResponse(
+        () -> createEntity(create, ADMIN_AUTH_HEADERS), BAD_REQUEST, CREATE_ORGANIZATION);
 
-    // Organization by default has DataConsumer Role. Ensure Role lists organization as one of the teams
+    // Organization by default has DataConsumer Role. Ensure Role lists organization as one of the
+    // teams
     RoleResourceTest roleResourceTest = new RoleResourceTest();
     Role role = roleResourceTest.getEntityByName("DataConsumer", "teams", ADMIN_AUTH_HEADERS);
     assertEntityReferencesContain(role.getTeams(), org.getEntityReference());
@@ -171,7 +184,11 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     create = createRequest(test, 4).withProfile(PROFILE);
     createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
 
-    create = createRequest(test, 5).withDisplayName("displayName").withDescription("description").withProfile(PROFILE);
+    create =
+        createRequest(test, 5)
+            .withDisplayName("displayName")
+            .withDescription("description")
+            .withProfile(PROFILE);
     createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
   }
 
@@ -179,13 +196,19 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   void post_teamWithUsersAndDefaultRoles_200_OK(TestInfo test) throws IOException {
     // Add team to user relationships while creating a team
     UserResourceTest userResourceTest = new UserResourceTest();
-    User user1 = userResourceTest.createEntity(userResourceTest.createRequest(test, 1), TEST_AUTH_HEADERS);
-    User user2 = userResourceTest.createEntity(userResourceTest.createRequest(test, 2), TEST_AUTH_HEADERS);
+    User user1 =
+        userResourceTest.createEntity(
+            userResourceTest.createRequest(test, 1), USER_WITH_CREATE_HEADERS);
+    User user2 =
+        userResourceTest.createEntity(
+            userResourceTest.createRequest(test, 2), USER_WITH_CREATE_HEADERS);
     List<UUID> users = Arrays.asList(user1.getId(), user2.getId());
 
     RoleResourceTest roleResourceTest = new RoleResourceTest();
-    Role role1 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
-    Role role2 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS);
+    Role role1 =
+        roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
+    Role role2 =
+        roleResourceTest.createEntity(roleResourceTest.createRequest(test, 2), ADMIN_AUTH_HEADERS);
     List<UUID> roles = Arrays.asList(role1.getId(), role2.getId());
 
     CreateTeam create =
@@ -210,11 +233,13 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   @Test
   void delete_validTeam_200_OK(TestInfo test) throws IOException {
     UserResourceTest userResourceTest = new UserResourceTest();
-    User user1 = userResourceTest.createEntity(userResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
+    User user1 =
+        userResourceTest.createEntity(userResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
     List<UUID> users = Collections.singletonList(user1.getId());
 
     RoleResourceTest roleResourceTest = new RoleResourceTest();
-    Role role1 = roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
+    Role role1 =
+        roleResourceTest.createEntity(roleResourceTest.createRequest(test, 1), ADMIN_AUTH_HEADERS);
     List<UUID> roles = Collections.singletonList(role1.getId());
 
     CreateTeam create = createRequest(test).withUsers(users).withDefaultRoles(roles);
@@ -225,7 +250,8 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Team -- has --> Role relationships are deleted
     deleteAndCheckEntity(team, ADMIN_AUTH_HEADERS);
 
-    // Ensure that the user does not have relationship to this team and is moved to the default team - Organization.
+    // Ensure that the user does not have relationship to this team and is moved to the default team
+    // - Organization.
     User user = userResourceTest.getEntity(user1.getId(), "teams", ADMIN_AUTH_HEADERS);
     assertEquals(1, user.getTeams().size());
     assertEquals(ORG_TEAM.getId(), user.getTeams().get(0).getId());
@@ -244,23 +270,23 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team div2 = createWithParents("div2", DIVISION, bu1.getEntityReference());
     Team dep3 = createWithParents("dep3", DEPARTMENT, div2.getEntityReference());
 
-    // Ensure parent has all the newly created children
+    // Ensure organization has all the newly created children
     ORG_TEAM = getEntity(ORG_TEAM.getId(), "children,parents", ADMIN_AUTH_HEADERS);
-    assertEntityReferences(new ArrayList<>(List.of(bu1.getEntityReference())), ORG_TEAM.getChildren());
+    assertEntityReferences(
+        new ArrayList<>(List.of(bu1.getEntityReference())), ORG_TEAM.getChildren());
 
-    // Ensure parent has all the newly created children
+    // Ensure bu1 has all the newly created children
     bu1 = getEntity(bu1.getId(), "children", ADMIN_AUTH_HEADERS);
     assertEntityReferences(new ArrayList<>(List.of(div2.getEntityReference())), bu1.getChildren());
 
     div2 = getEntity(div2.getId(), "children", ADMIN_AUTH_HEADERS);
     assertEntityReferences(new ArrayList<>(List.of(dep3.getEntityReference())), div2.getChildren());
 
-    // Recursive delete parent Team bu1
+    // Recursively soft delete bu1 and children
     deleteAndCheckEntity(bu1, true, false, ADMIN_AUTH_HEADERS);
 
-    Double expectedVersion = EntityUtil.nextVersion(div2.getVersion());
-
     // Validate that the entity version is updated after soft delete
+    Double expectedVersion = EntityUtil.nextVersion(div2.getVersion());
     Map<String, String> queryParams = new HashMap<>();
     queryParams.put("include", Include.DELETED.value());
 
@@ -279,13 +305,17 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     bu1 = getEntity(bu1.getId(), queryParams, "", ADMIN_AUTH_HEADERS);
     deleteAndCheckEntity(bu1, true, true, ADMIN_AUTH_HEADERS);
     assertResponse(
-        () -> getEntity(div2Id, queryParams, "", ADMIN_AUTH_HEADERS), NOT_FOUND, entityNotFound(TEAM, div2Id));
+        () -> getEntity(div2Id, queryParams, "", ADMIN_AUTH_HEADERS),
+        NOT_FOUND,
+        entityNotFound(TEAM, div2Id));
     assertResponse(
-        () -> getEntity(dep3Id, queryParams, "", ADMIN_AUTH_HEADERS), NOT_FOUND, entityNotFound(TEAM, dep3Id));
+        () -> getEntity(dep3Id, queryParams, "", ADMIN_AUTH_HEADERS),
+        NOT_FOUND,
+        entityNotFound(TEAM, dep3Id));
   }
 
   @Test
-  void patch_teamAttributes_as_non_admin_403(TestInfo test) throws HttpResponseException, JsonProcessingException {
+  void patch_teamAttributes_as_non_admin_403(TestInfo test) throws HttpResponseException {
     // Create team without any attributes
     Team team = createEntity(createRequest(test), ADMIN_AUTH_HEADERS);
     // Patching as a non-admin should be disallowed
@@ -303,7 +333,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     String originalJson = JsonUtils.pojoToJson(team);
     team.setTeamType(DIVISION);
 
-    ChangeDescription change = getChangeDescription(team.getVersion());
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
     fieldUpdated(change, "teamType", BUSINESS_UNIT.toString(), DIVISION.toString());
     patchEntityAndCheck(team, originalJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
@@ -316,7 +346,9 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     UserResourceTest userResourceTest = new UserResourceTest();
     List<EntityReference> userRefs = new ArrayList<>();
     for (int i = 0; i < 7; i++) {
-      User user = userResourceTest.createEntity(userResourceTest.createRequest(test, i), ADMIN_AUTH_HEADERS);
+      User user =
+          userResourceTest.createEntity(
+              userResourceTest.createRequest(test, i), ADMIN_AUTH_HEADERS);
       userRefs.add(user.getEntityReference());
     }
 
@@ -329,13 +361,16 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     assertResponse(
         () ->
             patchEntity(
-                team.getId(), originalJson, team, SecurityUtil.authHeaders(randomUserName + "@open-metadata.org")),
+                team.getId(),
+                originalJson,
+                team,
+                SecurityUtil.authHeaders(randomUserName + "@open-metadata.org")),
         FORBIDDEN,
         permissionNotAllowed(randomUserName, List.of(MetadataOperation.EDIT_USERS)));
 
     // Ensure user with UpdateTeam permission can add users to a team.
     User teamManagerUser = createTeamManager(test);
-    ChangeDescription change = getChangeDescription(team.getVersion());
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
     fieldAdded(change, "users", userRefs);
     patchEntityAndCheck(
         team,
@@ -361,7 +396,9 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Ensure parent has all the newly created children
     ORG_TEAM = getEntity(ORG_TEAM.getId(), "children,parents", ADMIN_AUTH_HEADERS);
     assertEntityReferences(
-        new ArrayList<>(List.of(bu1.getEntityReference(), div2.getEntityReference(), dep3.getEntityReference())),
+        new ArrayList<>(
+            List.of(
+                bu1.getEntityReference(), div2.getEntityReference(), dep3.getEntityReference())),
         ORG_TEAM.getChildren());
 
     //
@@ -374,7 +411,9 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Ensure parent has all the newly created children
     bu1 = getEntity(bu1.getId(), "children,parents", ADMIN_AUTH_HEADERS);
     assertEntityReferences(
-        new ArrayList<>(List.of(bu11.getEntityReference(), div12.getEntityReference(), dep13.getEntityReference())),
+        new ArrayList<>(
+            List.of(
+                bu11.getEntityReference(), div12.getEntityReference(), dep13.getEntityReference())),
         bu1.getChildren());
 
     // Ensure team hierarchy lists all the child teams
@@ -384,7 +423,8 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     UUID bu11Id = bu11.getId();
     UUID div12Id = div12.getId();
     UUID dep13Id = dep13.getId();
-    TeamHierarchy bu1Hierarchy = hierarchyList.stream().filter(t -> t.getId().equals(bu1Id)).findAny().orElse(null);
+    TeamHierarchy bu1Hierarchy =
+        hierarchyList.stream().filter(t -> t.getId().equals(bu1Id)).findAny().orElse(null);
     assertNotNull(bu1Hierarchy);
     assertEquals(3, bu1Hierarchy.getChildren().size());
     List<TeamHierarchy> children = bu1Hierarchy.getChildren();
@@ -395,13 +435,15 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team div121 = createWithParents("div121", DIVISION, div12.getEntityReference());
     // Ensure team hierarchy lists only the joinable child teams
     hierarchyList = getTeamsHierarchy(true, ADMIN_AUTH_HEADERS);
-    bu1Hierarchy = hierarchyList.stream().filter(t -> t.getId().equals(bu1Id)).findAny().orElse(null);
+    bu1Hierarchy =
+        hierarchyList.stream().filter(t -> t.getId().equals(bu1Id)).findAny().orElse(null);
     assertNotNull(bu1Hierarchy);
     assertEquals(2, bu1Hierarchy.getChildren().size());
     children = bu1Hierarchy.getChildren();
     assertTrue(children.stream().anyMatch(t -> t.getId().equals(bu11Id)));
     assertTrue(children.stream().anyMatch(t -> t.getId().equals(div12Id)));
-    TeamHierarchy div12Hierarchy = children.stream().filter(t -> t.getId().equals(div12Id)).findAny().orElse(null);
+    TeamHierarchy div12Hierarchy =
+        children.stream().filter(t -> t.getId().equals(div12Id)).findAny().orElse(null);
     assertNotNull(div12Hierarchy);
     assertEquals(1, div12Hierarchy.getChildren().size());
     assertEquals(div121.getId(), div12Hierarchy.getChildren().get(0).getId());
@@ -415,7 +457,8 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Ensure parent has all the newly created children
     div2 = getEntity(div2.getId(), "children,parents", ADMIN_AUTH_HEADERS);
     assertEntityReferences(
-        new ArrayList<>(List.of(div21.getEntityReference(), dep22.getEntityReference())), div2.getChildren());
+        new ArrayList<>(List.of(div21.getEntityReference(), dep22.getEntityReference())),
+        div2.getChildren());
 
     //
     // Create hierarchy of department under department
@@ -424,7 +467,8 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
 
     // Ensure parent has all the newly created children
     dep3 = getEntity(dep3.getId(), "children,parents", ADMIN_AUTH_HEADERS);
-    assertEntityReferences(new ArrayList<>(List.of(dep31.getEntityReference())), dep3.getChildren());
+    assertEntityReferences(
+        new ArrayList<>(List.of(dep31.getEntityReference())), dep3.getChildren());
 
     //
     // Test incorrect hierarchy is not allowed and results in failure
@@ -453,17 +497,24 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
 
     // Division can have only one parent
     assertResponse(
-        () -> createWithParents("divInvalid", DIVISION, dep22.getEntityReference(), ORG_TEAM.getEntityReference()),
+        () ->
+            createWithParents(
+                "divInvalid", DIVISION, dep22.getEntityReference(), ORG_TEAM.getEntityReference()),
         BAD_REQUEST,
         invalidParentCount(1, DIVISION));
 
     // Department can have more than one parent
     createWithParents(
-        "dep", DEPARTMENT, div12.getEntityReference(), div21.getEntityReference(), ORG_TEAM.getEntityReference());
+        "dep",
+        DEPARTMENT,
+        div12.getEntityReference(),
+        div21.getEntityReference(),
+        ORG_TEAM.getEntityReference());
 
     //
     // Deletion tests to ensure no dangling parent/children relationship
-    // Delete bu1 and ensure Organization does not have it a child and bu11, div12, dep13 don't change Org to parent
+    // Delete bu1 and ensure Organization does not have it a child and bu11, div12, dep13 don't
+    // change Org to parent
     deleteEntity(bu1.getId(), true, true, ADMIN_AUTH_HEADERS);
     ORG_TEAM = getEntity(ORG_TEAM.getId(), "children", ADMIN_AUTH_HEADERS);
     assertEntityReferencesDoesNotContain(ORG_TEAM.getChildren(), bu1.getEntityReference());
@@ -478,7 +529,11 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Create a parent team with children t11, t12, t13 and verify parent and child relationships
     Team t1 =
         createWithChildren(
-            "t1", BUSINESS_UNIT, bu11.getEntityReference(), div12.getEntityReference(), dep13.getEntityReference());
+            "t1",
+            BUSINESS_UNIT,
+            bu11.getEntityReference(),
+            div12.getEntityReference(),
+            dep13.getEntityReference());
     assertEntityReferencesContain(t1.getParents(), ORG_TEAM.getEntityReference());
 
     // assert children count for the newly created bu team
@@ -494,7 +549,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     queryParams.put("parentTeam", ORGANIZATION_NAME);
     teams = listEntities(queryParams, ADMIN_AUTH_HEADERS);
     assertTrue(teams.getData().stream().anyMatch(t -> t.getName().equals("t1")));
-    t1 = teams.getData().stream().filter(t -> t.getName().equals("t1")).collect(Collectors.toList()).get(0);
+    t1 = teams.getData().stream().filter(t -> t.getName().equals("t1")).toList().get(0);
     assertEquals(3, t1.getChildrenCount());
     assertEquals(0, t1.getUserCount());
 
@@ -517,7 +572,9 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
         CatalogExceptionMessage.invalidChild("invalidDivision", DIVISION, bu11));
     // Group can't have other teams as children. Only users are allowed under the team
     assertResponse(
-        () -> createWithChildren("invalidGroup", GROUP, bu11.getEntityReference()), BAD_REQUEST, CREATE_GROUP);
+        () -> createWithChildren("invalidGroup", GROUP, bu11.getEntityReference()),
+        BAD_REQUEST,
+        CREATE_GROUP);
   }
 
   @Test
@@ -528,29 +585,26 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team bu2 = createWithParents("put2", BUSINESS_UNIT, ORG_TEAM.getEntityReference());
 
     // Change bu2 parent from Organization to bu1 using PUT operation
-    CreateTeam create = createRequest("put2").withTeamType(BUSINESS_UNIT).withParents(List.of(bu1.getId()));
-    ChangeDescription change1 = getChangeDescription(bu2.getVersion());
-    fieldDeleted(change1, "parents", List.of(ORG_TEAM.getEntityReference()));
-    fieldAdded(change1, "parents", List.of(bu1.getEntityReference()));
-    bu2 = updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change1);
+    CreateTeam create =
+        createRequest("put2").withTeamType(BUSINESS_UNIT).withParents(List.of(bu1.getId()));
+    ChangeDescription change = getChangeDescription(bu2, MINOR_UPDATE);
+    fieldDeleted(change, "parents", List.of(ORG_TEAM.getEntityReference()));
+    fieldAdded(change, "parents", List.of(bu1.getEntityReference()));
+    bu2 = updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
-    // Remove bu2 parent. Default parent organization replaces it
+    // Remove bu2 parent bu1. Default parent organization replaces it
     create = createRequest("put2").withTeamType(BUSINESS_UNIT).withParents(null);
-    ChangeDescription change2 = getChangeDescription(bu2.getVersion());
-    fieldDeleted(change2, "parents", List.of(bu1.getEntityReference()));
-    fieldAdded(change2, "parents", List.of(ORG_TEAM.getEntityReference()));
-    bu2 = updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change2);
+    change = getChangeDescription(bu2, MINOR_UPDATE);
+    fieldDeleted(change, "parents", List.of(bu1.getEntityReference()));
+    fieldAdded(change, "parents", List.of(ORG_TEAM.getEntityReference()));
+    bu2 = updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
-    // Change bu2 parent from Organization to bu1 using PATCH operation
+    // Change bu2 parent from Organization to bu1 using PATCH operation.
+    // Change from this PATCH is combined with the previous PUT resulting in no change
     String json = JsonUtils.pojoToJson(bu2);
-    change1.setPreviousVersion(bu2.getVersion());
+    change = getChangeDescription(bu2, REVERT);
     bu2.setParents(List.of(bu1.getEntityReference()));
-    bu2 = patchEntityAndCheck(bu2, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change1);
-
-    json = JsonUtils.pojoToJson(bu2);
-    change2.setPreviousVersion(bu2.getVersion());
-    bu2.setParents(List.of(ORG_TEAM.getEntityReference()));
-    patchEntityAndCheck(bu2, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change2);
+    patchEntityAndCheck(bu2, json, ADMIN_AUTH_HEADERS, REVERT, change);
   }
 
   @Test
@@ -568,16 +622,15 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // patch the team with isJoinable set to true
     String json = JsonUtils.pojoToJson(team);
     team.setIsJoinable(true);
-    ChangeDescription change = getChangeDescription(team.getVersion());
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
     fieldUpdated(change, "isJoinable", false, true);
-    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, UpdateType.MINOR_UPDATE, change);
+    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
-    // set isJoinable to false and check
+    // set isJoinable to false - change from this PATCH and the previous are consolidated resulting
+    // in no change
     json = JsonUtils.pojoToJson(team);
     team.setIsJoinable(false);
-    change = getChangeDescription(team.getVersion());
-    fieldUpdated(change, "isJoinable", true, false);
-    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, UpdateType.MINOR_UPDATE, change);
+    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, NO_CHANGE, null);
   }
 
   @Test
@@ -586,7 +639,9 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     final int totalUsers = 20;
     ArrayList<UUID> users = new ArrayList<>();
     for (int i = 0; i < totalUsers; i++) {
-      User user = userResourceTest.createEntity(userResourceTest.createRequest(test, i), ADMIN_AUTH_HEADERS);
+      User user =
+          userResourceTest.createEntity(
+              userResourceTest.createRequest(test, i), ADMIN_AUTH_HEADERS);
       users.add(user.getId());
     }
 
@@ -607,23 +662,26 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     int removeUserIndex = new Random().nextInt(totalUsers);
     EntityReference deletedUser = team.getUsers().get(removeUserIndex);
     team.getUsers().remove(removeUserIndex);
-    ChangeDescription change = getChangeDescription(team.getVersion());
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
     fieldDeleted(change, "users", CommonUtil.listOf(deletedUser));
-    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, UpdateType.MINOR_UPDATE, change);
+    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
-    // Remove a default role from the team using patch request
+    // Remove a default role from the team using patch request - changes from this PATCH and
+    // previous are consolidated
     json = JsonUtils.pojoToJson(team);
     int removeDefaultRoleIndex = new Random().nextInt(roles.size());
     EntityReference deletedRole = team.getDefaultRoles().get(removeDefaultRoleIndex);
     team.getDefaultRoles().remove(removeDefaultRoleIndex);
-    change = getChangeDescription(team.getVersion());
+    change = getChangeDescription(team, CHANGE_CONSOLIDATED);
+    fieldDeleted(change, "users", CommonUtil.listOf(deletedUser));
     fieldDeleted(change, "defaultRoles", CommonUtil.listOf(deletedRole));
-    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, UpdateType.MINOR_UPDATE, change);
+    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, CHANGE_CONSOLIDATED, change);
   }
 
   @Test
   void post_teamWithPolicies(TestInfo test) throws IOException {
-    CreateTeam create = createRequest(getEntityName(test)).withPolicies(List.of(POLICY1.getId(), POLICY2.getId()));
+    CreateTeam create =
+        createRequest(getEntityName(test)).withPolicies(List.of(POLICY1.getId(), POLICY2.getId()));
     createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
   }
 
@@ -633,15 +691,20 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team team = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
 
     // Add policies to the team
-    create = createRequest(getEntityName(test)).withPolicies(List.of(POLICY1.getId(), POLICY2.getId()));
-    ChangeDescription change = getChangeDescription(team.getVersion());
-    fieldAdded(change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
+    create =
+        createRequest(getEntityName(test))
+            .withPolicies(List.of(POLICY1.getId(), POLICY2.getId()))
+            .withName(team.getName());
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
+    fieldAdded(
+        change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
     team = updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
     // Remove policies from the team
-    create = createRequest(getEntityName(test));
-    change = getChangeDescription(team.getVersion());
-    fieldDeleted(change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
+    create = createRequest(getEntityName(test)).withName(team.getName());
+    change = getChangeDescription(team, MINOR_UPDATE);
+    fieldDeleted(
+        change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
     updateAndCheckEntity(create, OK, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
   }
 
@@ -653,16 +716,65 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Add policies to the team
     String json = JsonUtils.pojoToJson(team);
     team.withPolicies(List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
-    ChangeDescription change = getChangeDescription(team.getVersion());
-    fieldAdded(change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
+    fieldAdded(
+        change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
     team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
-    // Remove policies from the team
+    // Remove policies from the team - Change from this PATCH is combined with the previous
+    // resulting in no change
     json = JsonUtils.pojoToJson(team);
     team.withPolicies(null);
-    change = getChangeDescription(team.getVersion());
-    fieldDeleted(change, "policies", List.of(POLICY1.getEntityReference(), POLICY2.getEntityReference()));
-    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+    change = getChangeDescription(team, REVERT);
+    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, REVERT, change);
+  }
+
+  @Test
+  void patch_teamEmail(TestInfo test) throws IOException {
+    CreateTeam create = createRequest(getEntityName(test));
+    Team team = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+
+    // Add email to the team
+    String json = JsonUtils.pojoToJson(team);
+    String email =
+        "team.!#$%&’*+/=?^_`{|}~-@openmetadata.org"; // Using all the allowed characters in email
+    // username
+    team.withEmail(email);
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
+    fieldAdded(change, "email", email);
+    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+
+    // Remove email from the team - changes from this PATCH and the previous are consolidated to no
+    // change
+    json = JsonUtils.pojoToJson(team);
+    change = getChangeDescription(team, NO_CHANGE);
+    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, NO_CHANGE, change);
+  }
+
+  @Test
+  void patch_ProfileWithSubscription(TestInfo test) throws IOException, URISyntaxException {
+    CreateTeam create = createRequest(getEntityName(test));
+    Team team = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+    Profile profile1 =
+        new Profile()
+            .withSubscription(
+                new SubscriptionConfig()
+                    .withSlack(new Webhook().withEndpoint(new URI("http://example.com"))));
+
+    // Add profile to the team
+    String json = JsonUtils.pojoToJson(team);
+    team.withProfile(profile1);
+    ChangeDescription change = getChangeDescription(team, MINOR_UPDATE);
+    fieldUpdated(change, "profile", PROFILE, profile1);
+    team = patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+
+    // Remove profile from the team - Change from this PATCH and previous are consolidated to no
+    // change
+    json = JsonUtils.pojoToJson(team);
+    team.withProfile(null);
+    change = getChangeDescription(team, CHANGE_CONSOLIDATED);
+    fieldDeleted(change, "profile", PROFILE);
+    patchEntityAndCheck(team, json, ADMIN_AUTH_HEADERS, CHANGE_CONSOLIDATED, change);
   }
 
   @Test
@@ -673,7 +785,8 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
 
     // TEAM21 inherits DATA_CONSUMER_ROLE from Organization and DATA_STEWARD_ROLE from Team2
     Team team21 = getEntity(TEAM21.getId(), "defaultRoles", ADMIN_AUTH_HEADERS);
-    assertEntityReferences(List.of(DATA_CONSUMER_ROLE_REF, DATA_STEWARD_ROLE_REF), team21.getInheritedRoles());
+    assertEntityReferences(
+        List.of(DATA_CONSUMER_ROLE_REF, DATA_STEWARD_ROLE_REF), team21.getInheritedRoles());
   }
 
   @Test
@@ -690,42 +803,57 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     String record = getRecord(1, GROUP, team.getName(), "", false, "", "invalidPolicy");
     String csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
     CsvImportResult result = importCsv(team.getName(), csv, false);
-    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
-    String[] expectedRows = {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(8, "invalidPolicy"))};
+    assertSummary(result, ApiStatus.FAILURE, 2, 1, 1);
+    String[] expectedRows = {
+      resultsHeader,
+      getFailedRecord(record, EntityCsv.entityNotFound(8, Entity.POLICY, "invalidPolicy"))
+    };
     assertRows(result, expectedRows);
 
     // Invalid roles
     record = getRecord(1, GROUP, team.getName(), "", false, "invalidRole", "");
     csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
     result = importCsv(team.getName(), csv, false);
-    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
-    expectedRows = new String[] {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(7, "invalidRole"))};
+    assertSummary(result, ApiStatus.FAILURE, 2, 1, 1);
+    expectedRows =
+        new String[] {
+          resultsHeader,
+          getFailedRecord(record, EntityCsv.entityNotFound(7, Entity.ROLE, "invalidRole"))
+        };
     assertRows(result, expectedRows);
 
     // Invalid owner
-    record = getRecord(1, GROUP, team.getName(), "invalidOwner", false, "", "");
+    record = getRecord(1, GROUP, team.getName(), "user:invalidOwner", false, "", "");
     csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
     result = importCsv(team.getName(), csv, false);
-    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
-    expectedRows = new String[] {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(5, "invalidOwner"))};
+    assertSummary(result, ApiStatus.FAILURE, 2, 1, 1);
+    expectedRows =
+        new String[] {
+          resultsHeader,
+          getFailedRecord(record, EntityCsv.entityNotFound(5, Entity.USER, "invalidOwner"))
+        };
     assertRows(result, expectedRows);
 
     // Invalid parent team
     record = getRecord(1, GROUP, "invalidParent", "", false, "", "");
     csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
     result = importCsv(team.getName(), csv, false);
-    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
-    expectedRows = new String[] {resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(4, "invalidParent"))};
+    assertSummary(result, ApiStatus.FAILURE, 2, 1, 1);
+    expectedRows =
+        new String[] {
+          resultsHeader, getFailedRecord(record, EntityCsv.entityNotFound(4, TEAM, "invalidParent"))
+        };
     assertRows(result, expectedRows);
 
     // Parent team not in the hierarchy - TEAM21 is not under the team to which import is being done
     record = getRecord(1, GROUP, TEAM21.getName(), "", false, "", "");
     csv = createCsv(TeamCsv.HEADERS, listOf(record), null);
     result = importCsv(team.getName(), csv, false);
-    assertSummary(result, CsvImportResult.Status.FAILURE, 2, 1, 1);
+    assertSummary(result, ApiStatus.FAILURE, 2, 1, 1);
     expectedRows =
         new String[] {
-          resultsHeader, getFailedRecord(record, TeamCsv.invalidTeam(4, team.getName(), "x1", TEAM21.getName()))
+          resultsHeader,
+          getFailedRecord(record, TeamCsv.invalidTeam(4, team.getName(), "x1", TEAM21.getName()))
         };
     assertRows(result, expectedRows);
   }
@@ -736,11 +864,24 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     Team team = createEntity(createRequest(teamName).withTeamType(DEPARTMENT), ADMIN_AUTH_HEADERS);
 
     // Create team hierarchy - team has children x1, x2. x1 has x11. x11 has x111
-    String record1 = getRecord(1, DEPARTMENT, teamName, USER1, true, listOf(DATA_CONSUMER_ROLE), listOf(POLICY1));
-    String record2 = getRecord(2, GROUP, teamName, USER2, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
+    String record1 =
+        getRecord(
+            1, DEPARTMENT, teamName, USER1, true, listOf(DATA_CONSUMER_ROLE), listOf(POLICY1));
+    String record2 =
+        getRecord(
+            2, GROUP, teamName, USER2, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
     String record11 =
-        getRecord(11, DEPARTMENT, "x1", USER2, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
-    String record111 = getRecord(111, GROUP, "x11", USER1, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
+        getRecord(
+            11,
+            DEPARTMENT,
+            "x1",
+            USER2,
+            false,
+            listOf(DATA_STEWARD_ROLE),
+            listOf(POLICY1, POLICY2));
+    String record111 =
+        getRecord(
+            111, GROUP, "x11", USER1, false, listOf(DATA_STEWARD_ROLE), listOf(POLICY1, POLICY2));
     List<String> createRecords = listOf(record1, record2, record11, record111);
 
     // Update teams x1, x2 description
@@ -752,6 +893,42 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     String record3 = getRecord(3, GROUP, team.getName(), null, true, null, (List<Policy>) null);
     List<String> newRecords = listOf(record3);
     testImportExport(team.getName(), TeamCsv.HEADERS, createRecords, updateRecords, newRecords);
+
+    // Import to team111 a user with parent team1 - since team1 is not under team111 hierarchy,
+    // import should fail
+    String record4 = getRecord(3, GROUP, "x1", null, true, null, (List<Policy>) null);
+    String csv = EntityCsvTest.createCsv(TeamCsv.HEADERS, listOf(record4), null);
+    CsvImportResult result = importCsv("x111", csv, false);
+    String error = TeamCsv.invalidTeam(4, "x111", "x3", "x1");
+    assertTrue(result.getImportResultsCsv().contains(error));
+  }
+
+  @Test
+  void test_inheritDomain(TestInfo test) throws IOException {
+    // When domain is not set for a user term, carry it forward from the parent team
+    CreateTeam createTeam =
+        createRequest(test)
+            .withDomains(List.of(DOMAIN.getFullyQualifiedName()))
+            .withTeamType(DEPARTMENT);
+    Team team = createEntity(createTeam, ADMIN_AUTH_HEADERS);
+
+    // Create a children team without domain and ensure it inherits domain from the parent
+    createTeam = createRequest("team1").withParents(listOf(team.getId()));
+    assertDomainInheritance(createTeam, DOMAIN.getEntityReference());
+  }
+
+  public Team assertDomainInheritance(CreateTeam createRequest, EntityReference expectedDomain)
+      throws IOException {
+    Team entity = createEntity(createRequest.withDomain(null), ADMIN_AUTH_HEADERS);
+    assertReference(expectedDomain, entity.getDomains().get(0)); // Inherited owner
+    entity = getEntity(entity.getId(), FIELD_DOMAINS, ADMIN_AUTH_HEADERS);
+    assertReference(expectedDomain, entity.getDomains().get(0)); // Inherited owner
+    assertTrue(entity.getDomains().get(0).getInherited());
+    entity = getEntityByName(entity.getFullyQualifiedName(), FIELD_DOMAINS, ADMIN_AUTH_HEADERS);
+    assertReference(expectedDomain, entity.getDomains().get(0)); // Inherited owner
+    assertTrue(entity.getDomains().get(0).getInherited());
+    assertEntityReferenceFromSearch(entity, expectedDomain, FIELD_DOMAINS);
+    return entity;
   }
 
   private static void validateTeam(
@@ -773,10 +950,14 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   }
 
   @Override
-  public Team validateGetWithDifferentFields(Team expectedTeam, boolean byName) throws HttpResponseException {
-    if (expectedTeam.getUsers() == null) {
+  public Team validateGetWithDifferentFields(Team expectedTeam, boolean byName)
+      throws HttpResponseException {
+    if (nullOrEmpty(expectedTeam.getUsers())) {
       UserResourceTest userResourceTest = new UserResourceTest();
-      CreateUser create = userResourceTest.createRequest("user", "", "", null).withTeams(List.of(expectedTeam.getId()));
+      CreateUser create =
+          userResourceTest
+              .createRequest("user", "", "", null)
+              .withTeams(List.of(expectedTeam.getId()));
       userResourceTest.createEntity(create, ADMIN_AUTH_HEADERS);
     }
 
@@ -786,10 +967,17 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
         byName
             ? getEntityByName(expectedTeam.getName(), fields, ADMIN_AUTH_HEADERS)
             : getEntity(expectedTeam.getId(), null, fields, ADMIN_AUTH_HEADERS);
-    validateTeam(getTeam, expectedTeam.getDescription(), expectedTeam.getDisplayName(), null, null, null, updatedBy);
+    validateTeam(
+        getTeam,
+        expectedTeam.getDescription(),
+        expectedTeam.getDisplayName(),
+        null,
+        null,
+        null,
+        updatedBy);
     assertNull(getTeam.getOwns());
 
-    fields = "users,owns,profile,defaultRoles,owner";
+    fields = "users,owns,profile,defaultRoles,owners";
     getTeam =
         byName
             ? getEntityByName(expectedTeam.getName(), fields, ADMIN_AUTH_HEADERS)
@@ -807,16 +995,10 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   }
 
   @Override
-  public Team beforeDeletion(TestInfo test, Team team) throws HttpResponseException {
-    LocationResourceTest locationResourceTest = new LocationResourceTest();
-    locationResourceTest.createEntity(
-        locationResourceTest.createRequest(test).withOwner(team.getEntityReference()), ADMIN_AUTH_HEADERS);
-    return team;
-  }
-
-  @Override
-  public void validateCreatedEntity(Team team, CreateTeam createRequest, Map<String, String> authHeaders) {
+  public void validateCreatedEntity(
+      Team team, CreateTeam createRequest, Map<String, String> authHeaders) {
     assertEquals(createRequest.getProfile(), team.getProfile());
+    assertEquals(createRequest.getEmail(), team.getEmail());
     TestUtils.validateEntityReferences(team.getOwns());
 
     List<EntityReference> expectedUsers = new ArrayList<>();
@@ -833,7 +1015,10 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
 
   @Override
   protected void validateDeletedEntity(
-      CreateTeam create, Team teamBeforeDeletion, Team teamAfterDeletion, Map<String, String> authHeaders)
+      CreateTeam create,
+      Team teamBeforeDeletion,
+      Team teamAfterDeletion,
+      Map<String, String> authHeaders)
       throws HttpResponseException {
     super.validateDeletedEntity(create, teamBeforeDeletion, teamAfterDeletion, authHeaders);
 
@@ -848,6 +1033,7 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   public void compareEntities(Team expected, Team updated, Map<String, String> authHeaders) {
     assertEquals(expected.getDisplayName(), updated.getDisplayName());
     assertEquals(expected.getProfile(), updated.getProfile());
+    assertEquals(expected.getEmail(), updated.getEmail());
     TestUtils.validateEntityReferences(updated.getOwns());
 
     List<EntityReference> expectedUsers = listOrEmpty(expected.getUsers());
@@ -860,15 +1046,14 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   }
 
   @Override
-  public void assertFieldChange(String fieldName, Object expected, Object actual) throws IOException {
+  public void assertFieldChange(String fieldName, Object expected, Object actual) {
     if (expected == actual) {
       return;
     }
     if (List.of("users", "defaultRoles", "parents", "children", "policies").contains(fieldName)) {
-      @SuppressWarnings("unchecked")
-      List<EntityReference> expectedRefs = (List<EntityReference>) expected;
-      List<EntityReference> actualRefs = JsonUtils.readObjects(actual.toString(), EntityReference.class);
-      assertEntityReferences(expectedRefs, actualRefs);
+      assertEntityReferencesFieldChange(expected, actual);
+    } else if (fieldName.equals("profile")) {
+      assertEquals(JsonUtils.pojoToJson(expected), actual);
     } else {
       assertCommonFieldChange(fieldName, expected, actual);
     }
@@ -879,13 +1064,17 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     return createWithParents(teamName, teamType, true, parents);
   }
 
-  private Team createWithParents(String teamName, TeamType teamType, Boolean isJoinable, EntityReference... parents)
+  private Team createWithParents(
+      String teamName, TeamType teamType, Boolean isJoinable, EntityReference... parents)
       throws HttpResponseException {
     List<EntityReference> parentList = List.of(parents);
-    List<UUID> parentIds = EntityUtil.toIds(parentList);
+    List<UUID> parentIds = EntityUtil.refToIds(parentList);
     Team team =
         createEntity(
-            createRequest(teamName).withParents(parentIds).withTeamType(teamType).withIsJoinable(isJoinable),
+            createRequest(teamName)
+                .withParents(parentIds)
+                .withTeamType(teamType)
+                .withIsJoinable(isJoinable),
             ADMIN_AUTH_HEADERS);
     assertParents(team, parentList);
     return team;
@@ -894,13 +1083,17 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
   private Team createWithChildren(String teamName, TeamType teamType, EntityReference... children)
       throws HttpResponseException {
     List<EntityReference> childrenList = List.of(children);
-    List<UUID> childIds = EntityUtil.toIds(childrenList);
-    Team team = createEntity(createRequest(teamName).withChildren(childIds).withTeamType(teamType), ADMIN_AUTH_HEADERS);
+    List<UUID> childIds = EntityUtil.refToIds(childrenList);
+    Team team =
+        createEntity(
+            createRequest(teamName).withChildren(childIds).withTeamType(teamType),
+            ADMIN_AUTH_HEADERS);
     assertChildren(team, childrenList);
     return team;
   }
 
-  private void assertParents(Team team, List<EntityReference> expectedParents) throws HttpResponseException {
+  private void assertParents(Team team, List<EntityReference> expectedParents)
+      throws HttpResponseException {
     assertEquals(team.getParents().size(), expectedParents.size());
     assertEntityReferences(expectedParents, team.getParents());
 
@@ -911,7 +1104,8 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     }
   }
 
-  private void assertChildren(Team team, List<EntityReference> expectedChildren) throws HttpResponseException {
+  private void assertChildren(Team team, List<EntityReference> expectedChildren)
+      throws HttpResponseException {
     assertEquals(team.getChildren().size(), expectedChildren.size());
     assertEntityReferences(expectedChildren, team.getChildren());
 
@@ -934,7 +1128,9 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
     // Create a policy with the rule
     PolicyResourceTest policyResourceTest = new PolicyResourceTest();
     CreatePolicy createPolicy =
-        policyResourceTest.createRequest("TeamManagerPolicy", "", "", null).withRules(List.of(rule));
+        policyResourceTest
+            .createRequest("TeamManagerPolicy", "", "", null)
+            .withRules(List.of(rule));
     Policy policy = policyResourceTest.createEntity(createPolicy, ADMIN_AUTH_HEADERS);
 
     // Create TeamManager role with the policy to update team
@@ -943,21 +1139,27 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
         roleResourceTest
             .createRequest(testInfo)
             .withName("TeamManager")
-            .withPolicies(List.of(policy.getEntityReference()));
+            .withPolicies(List.of(policy.getName()));
     Role teamManager = roleResourceTest.createEntity(createRole, ADMIN_AUTH_HEADERS);
 
     // Create a user with TeamManager role.
     UserResourceTest userResourceTest = new UserResourceTest();
     return userResourceTest.createEntity(
-        userResourceTest.createRequest(testInfo).withName("user.TeamManager").withRoles(List.of(teamManager.getId())),
+        userResourceTest
+            .createRequest(testInfo)
+            .withName("user.TeamManager")
+            .withRoles(List.of(teamManager.getId())),
         ADMIN_AUTH_HEADERS);
   }
 
-  public List<Team> getTeamOfTypes(TestInfo test, TeamType... teamTypes) throws HttpResponseException {
+  public List<Team> getTeamOfTypes(TestInfo test, TeamType... teamTypes)
+      throws HttpResponseException {
     List<Team> teams = new ArrayList<>();
     int i = 0;
     for (TeamType type : teamTypes) {
-      teams.add(createEntity(createRequest(getEntityName(test, i++)).withTeamType(type), ADMIN_AUTH_HEADERS));
+      teams.add(
+          createEntity(
+              createRequest(getEntityName(test, i++)).withTeamType(type), ADMIN_AUTH_HEADERS));
     }
     return teams;
   }
@@ -982,13 +1184,17 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
         index,
         teamType,
         parent != null ? parent : "",
-        owner != null ? owner.getName() : "",
+        owner != null ? "user:" + owner.getName() : "",
         isJoinable,
         defaultRoles != null
-            ? defaultRoles.stream().flatMap(r -> Stream.of(r.getName())).collect(Collectors.joining(";"))
+            ? defaultRoles.stream()
+                .flatMap(r -> Stream.of(r.getName()))
+                .collect(Collectors.joining(";"))
             : "",
         policies != null
-            ? policies.stream().flatMap(p -> Stream.of(p.getName())).collect(Collectors.joining(";"))
+            ? policies.stream()
+                .flatMap(p -> Stream.of(p.getName()))
+                .collect(Collectors.joining(";"))
             : "");
   }
 
@@ -1001,7 +1207,8 @@ public class TeamResourceTest extends EntityResourceTest<Team, CreateTeam> {
       String defaultRoles,
       String policies) {
     // CSV Header
-    // "name", "displayName", "description", "teamType", "parents", "owner", "isJoinable", "defaultRoles", & "policies"
+    // "name", "displayName", "description", "teamType", "parents", "owners", "isJoinable",
+    // "defaultRoles", & "policies"
     return String.format(
         "x%s,displayName%s,description%s,%s,%s,%s,%s,%s,%s",
         index,
